--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
